# NeuroLoom

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  build_check.txt  check_utf8.txt  empty_files.txt  out.txt  out2.txt  out3.txt  out4.txt  out_auth_ok.txt  out_auth_old.txt  out_models5.txt  out_models6.txt  out_models7.txt  out_models8.txt  out_models9.txt  push_out.txt  test_antigravity_output.txt  test_auth_output.txt  test_burncloud.bat  test_gpustack.bat  test_live.txt  test_newapi.bat  test_old_err.txt  test_old_output.txt  test_output_final.txt  test_qiniu.bat  test_tokenflux.bat  test_voyage.bat
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/nl_cognitive/: Cargo.toml
crates/nl_cognitive/src/: blacksmith.rs  lib.rs  system1.rs  system2.rs
crates/nl_cognitive/src/courtroom/: critic.rs  mod.rs  parliament.rs  worker.rs
crates/nl_core/: Cargo.toml
crates/nl_core/src/: entity.rs  error.rs  event.rs  lib.rs
crates/nl_durable/: Cargo.toml
crates/nl_durable/src/: actor_mesh.rs  event_store.rs  lib.rs  snapshot.rs
crates/nl_hap/: Cargo.toml
crates/nl_hap/src/: client.rs  lib.rs  market.rs  protocol.rs  server.rs
crates/nl_llm/: Cargo.toml  README.md  fix_examples_auth.py  fix_examples_auth_v2.py  iflow_debug.json  refactor_examples.py
crates/nl_llm/examples/: alayanew_chat.rs  build.bat  burncloud_test.rs  gpustack_test.rs  iflow_config.txt  newapi_test.rs  ph8_chat.rs  sophnet_chat.rs  test_antigravity.bat  test_antigravity_auth.rs  test_antigravity_chat.bat  test_antigravity_chat.rs  test_auth.bat  test_chat.bat  test_gemini_cli_chat.bat  test_gemini_cli_chat.rs  test_google_ai_studio_chat.bat  test_google_ai_studio_chat.rs  test_iflow_auth.rs  test_iflow_chat.rs  test_iflow_models.rs  test_models.bat  test_vertex_chat.bat  test_vertex_chat.rs  test_vertex_compat_chat.bat  test_vertex_compat_chat.rs  vertex_config.txt  voyage_test.rs
crates/nl_llm/examples/iflow/: .gitignore
crates/nl_llm/examples/vidu/: .env.example
crates/nl_llm/src/: client.rs  fallback.rs  gateway.rs  lib.rs  prompt.rs  prompt_ast.rs  token_bucket.rs
crates/nl_llm/src/auth/: types.rs
crates/nl_llm/src/concurrency/: controller.rs  mod.rs
crates/nl_llm/src/metrics/: mod.rs  pipeline.rs
crates/nl_llm/src/model/: aigocode.rs  aihubmix.rs  amp.rs  anthropic.rs  antigravity.rs  aws_claude.rs  cerebras.rs  codex.rs  cubence.rs  deepseek.rs  default_router.rs  doubao.rs  github_models.rs  groq.rs  iflow.rs  infini.rs  kat_coder.rs  longcat.rs  mimo.rs  minimax.rs  mod.rs  openai.rs  openrouter.rs  packycode.rs  ppio.rs  qwen.rs  resolver.rs  rightcode.rs  sora.rs  spark.rs  vertex.rs  xfyun_maas.rs  zhipu.rs
crates/nl_llm/src/pipeline/: mod.rs
crates/nl_llm/src/presets/: aicodemirror.rs  aigocode.rs  aihubmix.rs  aionly.rs  alayanew.rs  amp.rs  antigravity.rs  aws_claude.rs  azure_openai.rs  bailing.rs  burncloud.rs  cephalon.rs  cerebras.rs  claude.rs  claude_oauth.rs  cloudflare.rs  codex_oauth.rs  cohere.rs  cubence.rs  deepseek.rs  dify.rs  dmxapi.rs  fastgpt.rs  fireworks.rs  gemini.rs  github_models.rs  groq.rs  huggingface.rs  hunyuan.rs  hyperbolic.rs  infini.rs  kat_coder.rs  kimi.rs  kimi_oauth.rs  longcat.rs  mimo.rs  minimax.rs  minimax_cn.rs  modelscope.rs  moonshot.rs  (+20 more)
crates/nl_llm/src/primitive/: metadata.rs  parameters.rs  tool.rs
crates/nl_llm/src/protocol/: error.rs  mod.rs  traits.rs
crates/nl_llm/src/provider/: aiproxy.rs  anthropic.rs  antigravity.rs  azure_openai.rs  baichuan.rs  balance.rs  black_magic_proxy.rs  cephalon.rs  cli_proxy.rs  cloudflare.rs  cohere.rs  custom.rs  deepseek.rs  dify.rs  extension.rs  fastgpt.rs  gemini.rs  gemini_cli.rs  gemini_common.rs  google_ai_studio.rs  iflow.rs  infini.rs  jimeng.rs  kat_coder.rs  kimi.rs  kling.rs  longcat.rs  mimo.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  newapi.rs  ocoolai.rs  ollama.rs  openai.rs  poe.rs  qianfan.rs  qiniu.rs  qwen.rs  (+6 more)
crates/nl_llm/src/site/: mod.rs  traits.rs
crates/nl_llm/tests/: antigravity_test.rs  gemini_cli_test.rs  iflow_test.rs  poe_test.rs
crates/nl_llm_new/: Cargo.toml
crates/nl_llm_new/examples/: build.bat  test_old.rs
crates/nl_llm_new/examples/antigravity/: antigravity_config.txt
crates/nl_llm_new/examples/antigravity_chat/: main.rs  test_chat.bat
crates/nl_llm_new/examples/claude_chat/: main.rs  test_chat.bat
crates/nl_llm_new/examples/gemini_cli_chat/: main.rs  test_chat.bat
crates/nl_llm_new/examples/google_ai_studio_chat/: main.rs  test_chat.bat
crates/nl_llm_new/examples/iflow/: iflow_config.txt
crates/nl_llm_new/examples/iflow_auth/: main.rs  test_auth.bat
crates/nl_llm_new/src/: fallback.rs  gateway.rs  lib.rs  token_bucket.rs
crates/nl_llm_new/tests/: claude_test.rs  gemini_test.rs  openai_test.rs  translator_test.rs
crates/nl_llm_v2/: Cargo.toml  README.md  build_check.txt  check.txt  check2.txt  check3.txt  check4.txt  check5.txt  check6.txt  check7.txt  check_err.txt  check_err10.txt  check_err11.txt  check_err12.txt  check_err13.txt  check_err3.txt  check_err4.txt  check_err5.txt  check_err6.txt  check_err7.txt  check_err_aiproxy_examples.txt  check_err_custom.txt  check_err_custom2.txt  check_err_custom3.txt  check_err_custom4.txt  check_err_custom5.txt  check_err_models.txt  err.txt  err_log.txt  out.txt  out2.txt  out3.txt  out4.txt  out5.txt  out_auth.txt  out_log.txt  out_models.txt  out_models2.txt  out_models3.txt  out_models4.txt  (+2 more)
crates/nl_llm_v2/examples/: alayanew_chat.rs  burncloud_test.rs  gpustack_test.rs  newapi_test.rs  ph8_chat.rs  qiniu_test.rs  sophnet_chat.rs  voyage_test.rs
crates/nl_llm_v2/src/: client.rs  lib.rs
crates/nl_llm_v2/tests/: poe_test.rs
crates/nl_memory/: Cargo.toml
crates/nl_memory/src/: archival.rs  graph_rag.rs  hamt.rs  lib.rs
crates/nl_sandbox/: Cargo.toml
crates/nl_sandbox/src/: executor.rs  god_mode.rs  lib.rs  micro_vm.rs
crates/nl_vision/: Cargo.toml
crates/nl_vision/src/: delta_diff.rs  lib.rs  ocr.rs  stream.rs
(+1825 files in other folders)
