[package]
name = "neuroloom-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NeuroLoom CLI - Command Line Interface"

[[bin]]
name = "nl"
path = "src/main.rs"

[dependencies]
nl_core.workspace = true
nl_hap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-test.workspace = true
