[package]
name = "neuroloom-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NeuroLoom Desktop - Spatial Flow Canvas Frontend"

[[bin]]
name = "neuroloom-desktop"
path = "src/main.rs"

[dependencies]
nl_core.workspace = true
nl_hap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test.workspace = true
