[package]
name = "nl_cognitive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NeuroLoom Cognitive Engine - SOP, MCTS, MoA Parliament"

[dependencies]
nl_core.workspace = true
nl_llm.workspace = true
nl_memory.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
futures.workspace = true

[dev-dependencies]
tokio-test.workspace = true
