[package]
name = "nl_hap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NeuroLoom Hyper-Agent Protocol - Inter-Agent Communication"

[dependencies]
nl_core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
futures.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
flume.workspace = true

[dev-dependencies]
tokio-test.workspace = true
