[package]
name = "nl_llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NeuroLoom LLM Gateway - Token Bucket, Radix Tree Cache, Provider Proxy"

[dependencies]
nl_core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
futures.workspace = true
portable-pty.workspace = true
sha2.workspace = true
base64.workspace = true
flume.workspace = true

[dev-dependencies]
tokio-test.workspace = true
