[package]
name = "nl_llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NeuroLoom LLM Gateway - Token Bucket, Radix Tree Cache, Provider Proxy"

[dependencies]
nl_core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
futures.workspace = true
sha2.workspace = true
base64.workspace = true
flume.workspace = true
reqwest = { version = "0.11", features = ["json", "cookies", "multipart", "stream"] }
cookie = "0.17"
url = "2.4"
regex = "1.10"
tiny_http = "0.12.0"

[dev-dependencies]
tokio-test.workspace = true
