[package]
name = "nl_llm_v2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bitflags = "2.6"
once_cell = "1.19"
futures.workspace = true
uuid.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
url = "2.5"
tiny_http = "0.12"
tokio-stream = "0.1.18"
async-stream = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
dirs = "5"
open = "5"

[[example]]
name = "openai_chat"
path = "examples/openai/chat/main.rs"

[[example]]
name = "gemini_chat"
path = "examples/gemini/chat/main.rs"

[[example]]
name = "iflow_chat"
path = "examples/iflow/chat/main.rs"

[[example]]
name = "vertex_chat"
path = "examples/vertex/chat/main.rs"


[[example]]
name = "antigravity_chat"
path = "examples/antigravity/chat/main.rs"

[[example]]
name = "antigravity_stream"
path = "examples/antigravity/stream/main.rs"

[[example]]
name = "antigravity_models"
path = "examples/antigravity/models/main.rs"

[[example]]
name = "openai_stream"
path = "examples/openai/stream/main.rs"

[[example]]
name = "openai_tools"
path = "examples/openai/tools/main.rs"

[[example]]
name = "openai_auth"
path = "examples/openai/auth/main.rs"

[[example]]
name = "openai_models"
path = "examples/openai/models/main.rs"

[[example]]
name = "claude_chat"
path = "examples/claude/chat/main.rs"

[[example]]
name = "claude_stream"
path = "examples/claude/stream/main.rs"

[[example]]
name = "claude_models"
path = "examples/claude/models/main.rs"

[[example]]
name = "gemini_stream"
path = "examples/gemini/stream/main.rs"

[[example]]
name = "gemini_models"
path = "examples/gemini/models/main.rs"

[[example]]
name = "vertex_auth"
path = "examples/vertex/auth/main.rs"

[[example]]
name = "vertex_models"
path = "examples/vertex/models/main.rs"

[[example]]
name = "vertex_stream"
path = "examples/vertex/stream/main.rs"

[[example]]
name = "vertex_api_chat"
path = "examples/vertex_api/chat/main.rs"

[[example]]
name = "vertex_api_stream"
path = "examples/vertex_api/stream/main.rs"

[[example]]
name = "vertex_api_models"
path = "examples/vertex_api/models/main.rs"

[[example]]
name = "qwen_auth"
path = "examples/qwen/auth/main.rs"

[[example]]
name = "qwen_chat"
path = "examples/qwen/chat/main.rs"

[[example]]
name = "qwen_stream"
path = "examples/qwen/stream/main.rs"

[[example]]
name = "qwen_models"
path = "examples/qwen/models/main.rs"

[[example]]
name = "kimi_auth"
path = "examples/kimi/auth/main.rs"

[[example]]
name = "kimi_chat"
path = "examples/kimi/chat/main.rs"

[[example]]
name = "kimi_stream"
path = "examples/kimi/stream/main.rs"

[[example]]
name = "kimi_models"
path = "examples/kimi/models/main.rs"

[[example]]
name = "claude_oauth_auth"
path = "examples/claude_oauth/auth/main.rs"

[[example]]
name = "claude_oauth_chat"
path = "examples/claude_oauth/chat/main.rs"

[[example]]
name = "claude_oauth_stream"
path = "examples/claude_oauth/stream/main.rs"

[[example]]
name = "claude_oauth_models"
path = "examples/claude_oauth/models/main.rs"

[[example]]
name = "iflow_auth"
path = "examples/iflow/auth/main.rs"

[[example]]
name = "iflow_thinking"
path = "examples/iflow/thinking/main.rs"

[[example]]
name = "iflow_stream"
path = "examples/iflow/stream/main.rs"

[[example]]
name = "iflow_models"
path = "examples/iflow/models/main.rs"

[[example]]
name = "gemini_cli_auth"
path = "examples/gemini_cli/auth/main.rs"

[[example]]
name = "gemini_cli_chat"
path = "examples/gemini_cli/chat/main.rs"

[[example]]
name = "gemini_cli_stream"
path = "examples/gemini_cli/stream/main.rs"

[[example]]
name = "gemini_cli_models"
path = "examples/gemini_cli/models/main.rs"

[[example]]
name = "antigravity_auth"
path = "examples/antigravity/auth/main.rs"

[[example]]
name = "codex_oauth_auth"
path = "examples/codex_oauth/auth/main.rs"

[[example]]
name = "codex_oauth_chat"
path = "examples/codex_oauth/chat/main.rs"

[[example]]
name = "codex_oauth_stream"
path = "examples/codex_oauth/stream/main.rs"

[[example]]
name = "codex_oauth_models"
path = "examples/codex_oauth/models/main.rs"

[[example]]
name = "codex_api_auth"
path = "examples/codex_api/auth/main.rs"

[[example]]
name = "codex_api_chat"
path = "examples/codex_api/chat/main.rs"

[[example]]
name = "codex_api_stream"
path = "examples/codex_api/stream/main.rs"

[[example]]
name = "codex_api_models"
path = "examples/codex_api/models/main.rs"
