[package]
name = "nl_llm_v2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bitflags = "2.6"
once_cell = "1.19"
futures.workspace = true
uuid.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
url = "2.5"
tiny_http = "0.12"
tokio-stream = "0.1.18"
async-stream = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
dirs = "5"
open = "5"
ring = "0.17.14"

[[example]]
name = "openai_chat"
path = "examples/openai/chat/main.rs"

[[example]]
name = "custom_chat"
path = "examples/custom/chat/main.rs"

[[example]]
name = "custom_stream"
path = "examples/custom/stream/main.rs"

[[example]]
name = "custom_models"
path = "examples/custom/models/main.rs"

[[example]]
name = "gemini_chat"
path = "examples/gemini/chat/main.rs"

[[example]]
name = "iflow_chat"
path = "examples/iflow/chat/main.rs"

[[example]]
name = "vertex_chat"
path = "examples/vertex/chat/main.rs"


[[example]]
name = "antigravity_chat"
path = "examples/antigravity/chat/main.rs"

[[example]]
name = "antigravity_stream"
path = "examples/antigravity/stream/main.rs"

[[example]]
name = "antigravity_models"
path = "examples/antigravity/models/main.rs"

[[example]]
name = "openai_stream"
path = "examples/openai/stream/main.rs"

[[example]]
name = "openai_tools"
path = "examples/openai/tools/main.rs"

[[example]]
name = "openai_auth"
path = "examples/openai/auth/main.rs"

[[example]]
name = "openai_models"
path = "examples/openai/models/main.rs"

[[example]]
name = "claude_chat"
path = "examples/claude/chat/main.rs"

[[example]]
name = "claude_stream"
path = "examples/claude/stream/main.rs"

[[example]]
name = "claude_models"
path = "examples/claude/models/main.rs"

[[example]]
name = "gemini_stream"
path = "examples/gemini/stream/main.rs"

[[example]]
name = "gemini_models"
path = "examples/gemini/models/main.rs"

[[example]]
name = "vertex_auth"
path = "examples/vertex/auth/main.rs"

[[example]]
name = "vertex_models"
path = "examples/vertex/models/main.rs"

[[example]]
name = "vertex_stream"
path = "examples/vertex/stream/main.rs"

[[example]]
name = "vertex_api_chat"
path = "examples/vertex_api/chat/main.rs"

[[example]]
name = "vertex_api_stream"
path = "examples/vertex_api/stream/main.rs"

[[example]]
name = "vertex_api_models"
path = "examples/vertex_api/models/main.rs"

[[example]]
name = "qwen_auth"
path = "examples/qwen/auth/main.rs"

[[example]]
name = "qwen_chat"
path = "examples/qwen/chat/main.rs"

[[example]]
name = "qwen_stream"
path = "examples/qwen/stream/main.rs"

[[example]]
name = "qwen_models"
path = "examples/qwen/models/main.rs"

[[example]]
name = "kimi_auth"
path = "examples/kimi/auth/main.rs"

[[example]]
name = "kimi_chat"
path = "examples/kimi/chat/main.rs"

[[example]]
name = "kimi_stream"
path = "examples/kimi/stream/main.rs"

[[example]]
name = "kimi_models"
path = "examples/kimi/models/main.rs"

[[example]]
name = "kimi_coding_chat"
path = "examples/kimi_coding/chat/main.rs"

[[example]]
name = "qwen_coder_stream"
path = "examples/qwen_coder/stream/main.rs"

[[example]]
name = "kimi_oauth_chat"
path = "examples/kimi_oauth/chat/main.rs"

[[example]]
name = "qwen_oauth_chat"
path = "examples/qwen_oauth/chat/main.rs"

[[example]]
name = "claude_oauth_auth"
path = "examples/claude_oauth/auth/main.rs"

[[example]]
name = "claude_oauth_chat"
path = "examples/claude_oauth/chat/main.rs"

[[example]]
name = "claude_oauth_stream"
path = "examples/claude_oauth/stream/main.rs"

[[example]]
name = "claude_oauth_models"
path = "examples/claude_oauth/models/main.rs"

[[example]]
name = "iflow_auth"
path = "examples/iflow/auth/main.rs"

[[example]]
name = "iflow_thinking"
path = "examples/iflow/thinking/main.rs"

[[example]]
name = "iflow_stream"
path = "examples/iflow/stream/main.rs"

[[example]]
name = "iflow_models"
path = "examples/iflow/models/main.rs"

[[example]]
name = "gemini_cli_auth"
path = "examples/gemini_cli/auth/main.rs"

[[example]]
name = "gemini_cli_chat"
path = "examples/gemini_cli/chat/main.rs"

[[example]]
name = "gemini_cli_stream"
path = "examples/gemini_cli/stream/main.rs"

[[example]]
name = "gemini_cli_models"
path = "examples/gemini_cli/models/main.rs"

[[example]]
name = "antigravity_auth"
path = "examples/antigravity/auth/main.rs"

[[example]]
name = "codex_oauth_auth"
path = "examples/codex_oauth/auth/main.rs"

[[example]]
name = "codex_oauth_chat"
path = "examples/codex_oauth/chat/main.rs"

[[example]]
name = "codex_oauth_stream"
path = "examples/codex_oauth/stream/main.rs"

[[example]]
name = "codex_oauth_models"
path = "examples/codex_oauth/models/main.rs"

[[example]]
name = "codex_api_auth"
path = "examples/codex_api/auth/main.rs"

[[example]]
name = "codex_api_chat"
path = "examples/codex_api/chat/main.rs"

[[example]]
name = "codex_api_stream"
path = "examples/codex_api/stream/main.rs"

[[example]]
name = "codex_api_models"
path = "examples/codex_api/models/main.rs"

[[example]]
name = "amp_chat"
path = "examples/amp/chat/main.rs"

[[example]]
name = "amp_stream"
path = "examples/amp/stream/main.rs"

[[example]]
name = "amp_models"
path = "examples/amp/models/main.rs"

[[example]]
name = "amp_auth"
path = "examples/amp/auth/main.rs"

[[example]]
name = "deepseek_chat"
path = "examples/deepseek/chat/main.rs"

[[example]]
name = "deepseek_stream"
path = "examples/deepseek/stream/main.rs"

[[example]]
name = "deepseek_models"
path = "examples/deepseek/models/main.rs"

[[example]]
name = "deepseek_auth"
path = "examples/deepseek/auth/main.rs"

[[example]]
name = "zai_chat"
path = "examples/zai/chat/main.rs"

[[example]]
name = "zai_stream"
path = "examples/zai/stream/main.rs"

[[example]]
name = "zai_models"
path = "examples/zai/models/main.rs"

[[example]]
name = "zai_auth"
path = "examples/zai/auth/main.rs"

[[example]]
name = "zhipu_chat"
path = "examples/zhipu/chat/main.rs"

[[example]]
name = "zhipu_stream"
path = "examples/zhipu/stream/main.rs"

[[example]]
name = "zhipu_models"
path = "examples/zhipu/models/main.rs"

[[example]]
name = "zhipu_auth"
path = "examples/zhipu/auth/main.rs"

[[example]]
name = "kat_coder_auth"
path = "examples/kat_coder/auth/main.rs"

[[example]]
name = "kat_coder_chat"
path = "examples/kat_coder/chat/main.rs"

[[example]]
name = "kat_coder_stream"
path = "examples/kat_coder/stream/main.rs"

[[example]]
name = "kat_coder_models"
path = "examples/kat_coder/models/main.rs"

[[example]]
name = "longcat_auth"
path = "examples/longcat/auth/main.rs"

[[example]]
name = "longcat_chat"
path = "examples/longcat/chat/main.rs"

[[example]]
name = "longcat_stream"
path = "examples/longcat/stream/main.rs"

[[example]]
name = "longcat_models"
path = "examples/longcat/models/main.rs"

[[example]]
name = "minimax_auth"
path = "examples/minimax/auth/main.rs"

[[example]]
name = "minimax_chat"
path = "examples/minimax/chat/main.rs"

[[example]]
name = "minimax_stream"
path = "examples/minimax/stream/main.rs"

[[example]]
name = "minimax_models"
path = "examples/minimax/models/main.rs"

[[example]]
name = "minimax_cn_auth"
path = "examples/minimax_cn/auth/main.rs"

[[example]]
name = "minimax_cn_chat"
path = "examples/minimax_cn/chat/main.rs"

[[example]]
name = "minimax_cn_stream"
path = "examples/minimax_cn/stream/main.rs"

[[example]]
name = "minimax_cn_models"
path = "examples/minimax_cn/models/main.rs"

[[example]]
name = "doubaoseed_auth"
path = "examples/doubaoseed/auth/main.rs"

[[example]]
name = "doubaoseed_chat"
path = "examples/doubaoseed/chat/main.rs"

[[example]]
name = "doubaoseed_stream"
path = "examples/doubaoseed/stream/main.rs"

[[example]]
name = "doubaoseed_models"
path = "examples/doubaoseed/models/main.rs"

[[example]]
name = "bailing_auth"
path = "examples/bailing/auth/main.rs"

[[example]]
name = "bailing_chat"
path = "examples/bailing/chat/main.rs"

[[example]]
name = "bailing_stream"
path = "examples/bailing/stream/main.rs"

[[example]]
name = "bailing_models"
path = "examples/bailing/models/main.rs"

[[example]]
name = "mimo_auth"
path = "examples/mimo/auth/main.rs"

[[example]]
name = "mimo_chat"
path = "examples/mimo/chat/main.rs"

[[example]]
name = "mimo_stream"
path = "examples/mimo/stream/main.rs"

[[example]]
name = "mimo_models"
path = "examples/mimo/models/main.rs"

[[example]]
name = "modelscope_auth"
path = "examples/modelscope/auth/main.rs"

[[example]]
name = "modelscope_chat"
path = "examples/modelscope/chat/main.rs"

[[example]]
name = "modelscope_stream"
path = "examples/modelscope/stream/main.rs"

[[example]]
name = "modelscope_models"
path = "examples/modelscope/models/main.rs"

[[example]]
name = "aihubmix_auth"
path = "examples/aihubmix/auth/main.rs"

[[example]]
name = "aihubmix_chat"
path = "examples/aihubmix/chat/main.rs"

[[example]]
name = "aihubmix_stream"
path = "examples/aihubmix/stream/main.rs"

[[example]]
name = "aihubmix_models"
path = "examples/aihubmix/models/main.rs"

[[example]]
name = "siliconflow_auth"
path = "examples/siliconflow/auth/main.rs"

[[example]]
name = "siliconflow_chat"
path = "examples/siliconflow/chat/main.rs"

[[example]]
name = "siliconflow_stream"
path = "examples/siliconflow/stream/main.rs"

[[example]]
name = "siliconflow_models"
path = "examples/siliconflow/models/main.rs"

[[example]]
name = "siliconflow_en_auth"
path = "examples/siliconflow_en/auth/main.rs"

[[example]]
name = "siliconflow_en_chat"
path = "examples/siliconflow_en/chat/main.rs"

[[example]]
name = "siliconflow_en_stream"
path = "examples/siliconflow_en/stream/main.rs"

[[example]]
name = "siliconflow_en_models"
path = "examples/siliconflow_en/models/main.rs"

[[example]]
name = "dmxapi_auth"
path = "examples/dmxapi/auth/main.rs"

[[example]]
name = "dmxapi_chat"
path = "examples/dmxapi/chat/main.rs"

[[example]]
name = "dmxapi_stream"
path = "examples/dmxapi/stream/main.rs"

[[example]]
name = "dmxapi_models"
path = "examples/dmxapi/models/main.rs"

[[example]]
name = "openrouter_auth"
path = "examples/openrouter/auth/main.rs"

[[example]]
name = "openrouter_chat"
path = "examples/openrouter/chat/main.rs"

[[example]]
name = "openrouter_stream"
path = "examples/openrouter/stream/main.rs"

[[example]]
name = "openrouter_models"
path = "examples/openrouter/models/main.rs"

[[example]]
name = "dmxapi_tools"
path = "examples/dmxapi/tools/main.rs"

[[example]]
name = "nvidia_auth"
path = "examples/nvidia/auth/main.rs"

[[example]]
name = "nvidia_chat"
path = "examples/nvidia/chat/main.rs"

[[example]]
name = "nvidia_stream"
path = "examples/nvidia/stream/main.rs"

[[example]]
name = "nvidia_models"
path = "examples/nvidia/models/main.rs"

[[example]]
name = "packycode_auth"
path = "examples/packycode/auth/main.rs"

[[example]]
name = "packycode_chat"
path = "examples/packycode/chat/main.rs"

[[example]]
name = "packycode_stream"
path = "examples/packycode/stream/main.rs"

[[example]]
name = "packycode_models"
path = "examples/packycode/models/main.rs"

[[example]]
name = "cubence_auth"
path = "examples/cubence/auth/main.rs"

[[example]]
name = "cubence_chat"
path = "examples/cubence/chat/main.rs"

[[example]]
name = "cubence_stream"
path = "examples/cubence/stream/main.rs"

[[example]]
name = "cubence_models"
path = "examples/cubence/models/main.rs"

[[example]]
name = "cubence_tools"
path = "examples/cubence/tools/main.rs"

[[example]]
name = "aigocode_auth"
path = "examples/aigocode/auth/main.rs"

[[example]]
name = "aigocode_chat"
path = "examples/aigocode/chat/main.rs"

[[example]]
name = "aigocode_stream"
path = "examples/aigocode/stream/main.rs"

[[example]]
name = "aigocode_models"
path = "examples/aigocode/models/main.rs"

[[example]]
name = "rightcode_auth"
path = "examples/rightcode/auth/main.rs"

[[example]]
name = "rightcode_chat"
path = "examples/rightcode/chat/main.rs"

[[example]]
name = "rightcode_stream"
path = "examples/rightcode/stream/main.rs"

[[example]]
name = "rightcode_models"
path = "examples/rightcode/models/main.rs"

[[example]]
name = "rightcode_tools"
path = "examples/rightcode/tools/main.rs"

[[example]]
name = "aicodemirror_auth"
path = "examples/aicodemirror/auth/main.rs"

[[example]]
name = "aicodemirror_chat"
path = "examples/aicodemirror/chat/main.rs"

[[example]]
name = "aicodemirror_stream"
path = "examples/aicodemirror/stream/main.rs"

[[example]]
name = "aicodemirror_models"
path = "examples/aicodemirror/models/main.rs"

[[example]]
name = "azure_openai_auth"
path = "examples/azure_openai/auth/main.rs"

[[example]]
name = "azure_openai_chat"
path = "examples/azure_openai/chat/main.rs"

[[example]]
name = "azure_openai_models"
path = "examples/azure_openai/models/main.rs"

[[example]]
name = "azure_openai_stream"
path = "examples/azure_openai/stream/main.rs"

[[example]]
name = "azure_openai_tools"
path = "examples/azure_openai/tools/main.rs"

[[example]]
name = "aws_claude_models"
path = "examples/aws_claude/models/main.rs"

[[example]]
name = "aws_claude_chat"
path = "examples/aws_claude/chat/main.rs"

[[example]]
name = "aws_claude_ak_chat"
path = "examples/aws_claude_ak/chat/main.rs"

[[example]]
name = "aws_claude_ak_models"
path = "examples/aws_claude_ak/models/main.rs"

[[example]]
name = "cohere_chat"
path = "examples/cohere/chat/main.rs"

[[example]]
name = "cohere_stream"
path = "examples/cohere/stream/main.rs"

[[example]]
name = "cohere_models"
path = "examples/cohere/models/main.rs"

[[example]]
name = "cloudflare_chat"
path = "examples/cloudflare/chat/main.rs"

[[example]]
name = "cloudflare_models"
path = "examples/cloudflare/models/main.rs"

[[example]]
name = "qianfan_chat"
path = "examples/qianfan/chat/main.rs"

[[example]]
name = "qianfan_models"
path = "examples/qianfan/models/main.rs"

[[example]]
name = "spark_auth"
path = "examples/spark/auth/main.rs"

[[example]]
name = "spark_chat"
path = "examples/spark/chat/main.rs"

[[example]]
name = "spark_stream"
path = "examples/spark/stream/main.rs"

[[example]]
name = "spark_models"
path = "examples/spark/models/main.rs"

[[example]]
name = "perplexity_chat"
path = "examples/perplexity/chat/main.rs"

[[example]]
name = "perplexity_models"
path = "examples/perplexity/models/main.rs"

[[example]]
name = "hunyuan_chat"
path = "examples/hunyuan/chat/main.rs"

[[example]]
name = "hunyuan_stream"
path = "examples/hunyuan/stream/main.rs"

[[example]]
name = "hunyuan_models"
path = "examples/hunyuan/models/main.rs"

[[example]]
name = "dify_chat"
path = "examples/dify/chat/main.rs"

[[example]]
name = "dify_stream"
path = "examples/dify/stream/main.rs"

[[example]]
name = "jina_chat"
path = "examples/jina/chat/main.rs"

[[example]]
name = "jina_stream"
path = "examples/jina/stream/main.rs"

[[example]]
name = "jina_models"
path = "examples/jina/models/main.rs"

[[example]]
name = "mistral_chat"
path = "examples/mistral/chat/main.rs"

[[example]]
name = "mistral_stream"
path = "examples/mistral/stream/main.rs"

[[example]]
name = "mistral_models"
path = "examples/mistral/models/main.rs"

[[example]]
name = "fastgpt_chat"
path = "examples/fastgpt/chat/main.rs"

[[example]]
name = "fastgpt_stream"
path = "examples/fastgpt/stream/main.rs"

[[example]]
name = "fastgpt_models"
path = "examples/fastgpt/models/main.rs"

[[example]]
name = "aiproxy_chat"
path = "examples/aiproxy/chat/main.rs"

[[example]]
name = "aiproxy_stream"
path = "examples/aiproxy/stream/main.rs"

[[example]]
name = "xai_chat"
path = "examples/xai/chat/main.rs"

[[example]]
name = "xai_stream"
path = "examples/xai/stream/main.rs"

[[example]]
name = "xai_models"
path = "examples/xai/models/main.rs"

[[example]]
name = "aiproxy_models"
path = "examples/aiproxy/models/main.rs"

[[example]]
name = "moka_chat"
path = "examples/moka/chat/main.rs"

[[example]]
name = "moka_stream"
path = "examples/moka/stream/main.rs"

[[example]]
name = "moka_models"
path = "examples/moka/models/main.rs"

[[example]]
name = "coze_chat"
path = "examples/coze/chat/main.rs"

[[example]]
name = "coze_stream"
path = "examples/coze/stream/main.rs"

[[example]]
name = "coze_models"
path = "examples/coze/models/main.rs"

[[example]]
name = "kling_video"
path = "examples/kling/video/main.rs"
required-features = ["reqwest", "tokio"]


[[example]]
name = "jimeng_video"
path = "examples/jimeng/video/main.rs"

[[example]]
name = "vidu_video"
path = "examples/vidu/video/main.rs"

[[example]]
name = "submodel_chat"
path = "examples/submodel/chat/main.rs"

[[example]]
name = "doubao_video"
path = "examples/doubao/video/main.rs"

[[example]]
name = "sora_video"
path = "examples/sora/video/main.rs"

[[example]]
name = "replicate_video"
path = "examples/replicate/video/main.rs"

[[example]]
name = "groq_chat"
path = "examples/groq/chat/main.rs"

[[example]]
name = "xfyun_maas_chat"
path = "examples/xfyun_maas/chat/main.rs"
[[example]]
name = "xfyun_maas_stream"
path = "examples/xfyun_maas/stream/main.rs"
[[example]]
name = "xfyun_maas_models"
path = "examples/xfyun_maas/models/main.rs"
[[example]]
name = "xfyun_maas_auth"
path = "examples/xfyun_maas/auth/main.rs"

[[example]]
name="ollama_chat"
path="examples/ollama/chat/main.rs"

[[example]]
name="ollama_stream"
path="examples/ollama/stream/main.rs"

[[example]]
name="ollama_models"
path="examples/ollama/models/main.rs"


[[example]]
name = "together_chat"
path = "examples/together/chat/main.rs"
[[example]]
name = "fireworks_chat"
path = "examples/fireworks/chat/main.rs"

[[example]]
name = "huggingface_chat"
path = "examples/huggingface/chat/main.rs"
[[example]]
name = "baichuan_chat"
path = "examples/baichuan/chat/main.rs"

[[example]]
name = "baichuan_stream"
path = "examples/baichuan/stream/main.rs"
