[package]
name = "nl_memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NeuroLoom Memory Foundation - HAMT Index, GraphRAG, Archival"

[dependencies]
nl_core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
futures.workspace = true
surrealdb.workspace = true

[dev-dependencies]
tokio-test.workspace = true
